# chewacla

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGES.rst  LICENSE  README.md  genindex.html  guide.html  index.html  install.html  license.html  objects.inv  py-modindex.html  pyproject.toml  release_notes.html  search.html  searchindex.js
.github/: dependabot.yml
.github/workflows/: code.yml  docs.yml
_modules/: chewacla.html  index.html
_modules/chewacla/: adhoc.html  shorthand.html
_sources/: guide.rst.txt  index.rst.txt  license.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/chewacla/: index.rst.txt
_sources/autoapi/chewacla/_version/: index.rst.txt
_sources/autoapi/chewacla/adhoc/: index.rst.txt
_sources/autoapi/chewacla/lattice/: index.rst.txt
_sources/autoapi/chewacla/shorthand/: index.rst.txt
_sources/autoapi/chewacla/solver/: index.rst.txt
_sources/autoapi/chewacla/utils/: index.rst.txt
_static/: documentation_options.js
autoapi/: index.html
autoapi/chewacla/: index.html
autoapi/chewacla/_version/: index.html
autoapi/chewacla/adhoc/: index.html
autoapi/chewacla/lattice/: index.html
autoapi/chewacla/shorthand/: index.html
autoapi/chewacla/solver/: index.html
autoapi/chewacla/utils/: index.html
docs/: make.bat
docs/source/: conf.py  index.rst  install.rst  substitutions.txt
docs/source/_static/: unit-cell-vectors.vsdx
src/chewacla/: __init__.py  adhoc.py  bl1967.py  lattice.py  shorthand.py  solver.py  utils.py
src/chewacla/tests/: test_adhoc.py  test_lattice.py  test_polar_decompose_rotation.py  test_sample_rotation_delegation.py  test_scattering_vector_lab.py  test_shorthand.py  test_utils.py  test_version_loader.py
